src/test/ui/consts/static_mut_containing_mut_ref2.stock.stderr
error[E0764]: mutable references are not allowed in statics
  --> $DIR/static_mut_containing_mut_ref2.rs:7:46
   |
LL | pub static mut STDERR_BUFFER: () = unsafe { *(&mut STDERR_BUFFER_SPACE) = 42; };
   |                                              ^^^^^^^^^^^^^^^^^^^^^^^^^^ `&mut` is only allowed in `const fn`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0764`.
